--- a/lp.html
+++ b/lp.html
@@ -4,9 +4,10 @@
 <title>ランディングページ</title>
 </head>
 <body>
+    <script type="text/javascript" src="https://tad.atown.jp/adserver/js/lib/clickaction/click-v2.js"></script>
+    <div id="atown-conversion-tag" data-atown-conversion-tag="https://tad.atown.jp/adserver/ap.af?aid=1056" style="display: none;"></div><script type="text/javascript" src="https://tad.atown.jp/adserver/js/lib/clickaction/action-v2.js"></script>
 
-<h2>ランディングページ</h2>
-
-<a href="./campaign41.html" target="_blank"><b>サンクスページ #41</b></a>
+    <h2>ランディングページ</h2>
+    <a href="./campaign41.html" target="_blank"><b>サンクスページ #41</b></a>
 
 </body>
