--- a/campaign41.html
+++ b/campaign41.html
@@ -4,6 +4,9 @@
 <title>サンクス</title>
 </head>
 <body>
+<script type="text/javascript" src="https://tad.atown.jp/adserver/js/lib/clickaction/click-v2.js"></script>
+<div id="atown-conversion-tag" data-atown-conversion-tag="https://tad.atown.jp/adserver/ap.af?aid=1056" style="display: none;"></div><script type="text/javascript" src="https://tad.atown.jp/adserver/js/lib/clickaction/action-v2.js"></script>
+
 <h2>サンクス</h2>
 <section id="atown-affico-tag" data-atown-location="https://tad.atown.jp/adserver" data-atown-diid="41" style="display: none;">
     <style>
